# minebot

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: cicd.yaml
src/: main.rs  minecraft.rs
src/commands/: mod.rs  ping.rs  say.rs  status.rs  whitelist.rs
