[package]
name = "minebot"
version = "0.1.0"
edition = "2021"
authors = ["Noah Dunbar <noah@noahdunbar.com>"]

[dependencies]
async-minecraft-ping = "0.8.0"
dotenv = "0.15.0"
serenity = { version = "0.12.2", default-features = false, features = [
  "client",
  "gateway",
  "model",
  "rustls_backend",
] }
tokio = { version = "1.38.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
