[package]
name = "minebot"
version = "0.1.0"
edition = "2021"
authors = ["Noah Dunbar <noah@noahdunbar.com>"]
description = "A simple Discord bot to interact with your Minecraft server"
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://github.com/The-Noah/minebot"
repository = "https://github.com/The-Noah/minebot"
license = "MIT"
include = ["**/*.rs", "Cargo.{toml,lock}", "LICENSE", "README.md"]

[dependencies]
async-minecraft-ping = "0.8.0"
dotenv = "0.15.0"
rcon = { version = "0.6.0", features = ["rt-tokio"] }
serenity = { version = "0.12.2", default-features = false, features = [
  "client",
  "gateway",
  "model",
  "rustls_backend",
] }
tokio = { version = "1.38.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
